--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
 
   <!-- Hero Section -->
 
-  <!-- HERO
-    ================================================== -->
   <section id="hero" data-type="background" data-speed="5">
     <article>
       <div class="container clearfix">
@@ -114,7 +112,28 @@
 
   <!-- Opt In Section -->
 
-  <section></section>
+  <section id="optin">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-sm-8">
+          <p class="lead"><strong>Subscribe to our mailing list.</strong> We'll send something special as a thank you.</p>
+        </div>
+        <!-- end col -->
+
+        <div class="col-sm-4">
+          <button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
+						Click here to subscribe
+					</button>
+        </div>
+        <!-- end col -->
+
+      </div>
+      <!-- row -->
+    </div>
+    <!-- container -->
+  </section>
+  <!-- optin -->
 
   <!-- Boost Your Income Section -->
 
@@ -162,6 +181,9 @@
   <script src="assets/js/jquery-3.1.1.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="assets/js/bootstrap.min.js"></script>
+  <!-- Custome JS For Our Site-->
+  <acript src="assets/js/main.js">
+    </script>
 </body>
 
 </html>
