--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/img/favicon.ico" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bolg | Bootstrap To Wordpress Static</title>
+    <title>Blog | Bootstrap To Wordpress Static</title>
 
     <!-- Bootstrap -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
